# httpdbg

./: .coveragerc  .gitignore  .travis.yml  CREDITS.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev-ui.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  httpdbg.yml
httpdbg/: LICENSE  Makefile  README.md  __init__.py  __main__.py  args.py  env.py  exception.py  export.py  hook.py  http_status_code.py  httpdb.py  httpdbg.py  initiator.py  log.py  mode_console.py  mode_go.py  mode_module.py  mode_pytest.py  mode_script.py  preview.py  records.py  requirements-dev-ui.txt  server.py  source.py  utils.py
httpdbg/hooks/: __init__.py  aiohttp.py  all.py  cookies.py  external.py  fastapi.py  flask.py  generic.py  go.py  h2.py  http.py  httpclient.py  httpdbg-tracer.go  httpx.py  pytest.py  record.py  recordhttp1.py  recordhttp2.py  requests.py  socket.py  starlette.py  template_sitecustomize.py  unittest.py  urllib3.py  utils.py  uvicorn.py
httpdbg/httpdbg/: __init__.py  preview.py  records.py
httpdbg/httpdbg/hooks/: all.py
httpdbg/httpdbg/webapp/: api.py  preview.py
httpdbg/httpdbg/webapp/static/: detail.css  main.js
httpdbg/pytest_plugin/: __init__.py
httpdbg/pytest_plugin/httpdbg_pytest/: __init__.py  plugin.py
httpdbg/tests/: demo_run_pytest.py  test_hook_aiohttp.py  test_preview.py
httpdbg/tests/initiator_pck/: __init__.py  mod1.py
httpdbg/tests/initiator_pck/initiator2/: mod2.py
httpdbg/tests/initiator_pck/initiator2/initiator3/: __init__.py
httpdbg/tests/ui/web/: ui.py
httpdbg/vcrpy/: __init__.py  persister.py  utils.py
httpdbg/webapp/: __init__.py  api.py  app.py  informations.py  preview.py
httpdbg/webapp/static/: api.js  column.css  config.htm  configuration.css  configuration.js  detail.css  filter.js  index.htm  main.js  render.js  style.css  table.css  tooltip.css  utils.js
pytest-httpdbg/: LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
pytest-httpdbg/pytest_httpdbg/: __init__.py  plugin.py
pytest-httpdbg/tests/: conftest.py  test_plugin.py
tests/: conftest.py  demo_client_load.py  demo_fastapi.py  demo_http2.py  demo_order_by.py  demo_run_multiprocess.py  demo_run_multithread.py  demo_run_pytest.py  demo_run_script.py  demo_run_unittest.py  test_api.py  test_cli.py  test_context_manager.py  test_decorator.py  test_hook_aiohttp.py  test_hook_fastapi.py  test_hook_flask.py  test_hook_h2.py  test_hook_httpx.py  test_hook_pytest.py  test_hook_requests.py  test_hook_unittest.py  test_hook_urllib3.py  test_initiator.py  test_mode_console.py  test_mode_module_pytest.py  test_mode_pytest.py  test_mode_script.py  test_multiprocess.py  test_preview.py  test_pyhttpdbg_server.py  test_server.py  test_server_hook_fastapi.py  test_server_hook_flask.py  test_vcrpy_utils_cookies.py  test_vcrpy_utils_headers.py  test_web.py  utils.py
tests/demo_go/: go.mod  main.go
tests/demo_go/indir/: mymod.go
tests/initiator_pck/: __init__.py  mod1.py  repr_exception.py
tests/initiator_pck/initiator2/: mod2.py
tests/initiator_pck/initiator2/initiator3/: __init__.py
tests/ui/: test_web.py
tests/ui/web/: ui.py
tests/web/: ui.py
