[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "httpdbg"
authors = [
    {name = "cle-b", email = "cle@tictac.pm"},
]
description="A very simple tool to debug HTTP(S) client requests"
readme="README.md"
urls = {repository = "https://github.com/cle-b/httpdbg"}
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.scripts]
pyhttpdbg = "httpdbg.__main__:pyhttpdbg_entry_point"

[tool.setuptools]
packages = ["httpdbg", "httpdbg.hooks", "httpdbg.webapp"]

[tool.setuptools.package-data]
httpdbg = ["webapp/static/*", "webapp/static/icons/*"]

[tool.setuptools.dynamic]
version = {attr = "httpdbg.VERSION"}

[tool.mypy]
no_implicit_optional = false
files = ["httpdbg"]
