[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-httpdbg"
authors = [
    {name = "cle-b", email = "cle@tictac.pm"},
]
description="A pytest plugin to record HTTP(S) requests with stack trace"
readme="README.md"
urls = {repository = "https://github.com/cle-b/httpdbg"}
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest"
]
dynamic = ["version"]
dependencies = [
  "httpdbg >= 0.12.0",
  "pytest >= 7.0.0"
]

[tool.setuptools]
packages = ["pytest_httpdbg"]

[tool.setuptools.dynamic]
version = {attr = "pytest_httpdbg.VERSION"}

